// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpdateMessage component Should be render correctly if blocking update 1`] = `
<div
  className="styles__Infos___2ZZVs styles__Infos--danger___3wKYc u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="styles__Infos-description___7P1NP"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef(WithStyles)
            className="u-error"
            variant="h5"
          >
            An update is available for this service.
          </ForwardRef(WithStyles)>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef(WithStyles)
              className="u-pl-half"
              variant="body1"
            >
              Update it to keep fetching your data
            </ForwardRef(WithStyles)>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <DefaultButton
        className="u-m-0"
        disabled={false}
        label="Update"
        onClick={[Function]}
        theme="danger"
      />
    </div>
  </Stack>
</div>
`;

exports[`UpdateMessage component Should be render correctly if not blocking update 1`] = `
<div
  className="styles__Infos___2ZZVs styles__Infos--secondary___1AW6F u-maw-none"
>
  <Stack
    spacing="m"
    tag="div"
  >
    <div
      className="styles__Infos-description___7P1NP"
    >
      <Stack
        spacing="xs"
        tag="div"
      >
        <React.Fragment>
          <ForwardRef(WithStyles)
            className=""
            variant="h5"
          >
            An update is available for this service.
          </ForwardRef(WithStyles)>
          <div
            className="u-flex u-w-100"
          >
            <ForwardRef(WithStyles)
              className="u-pl-half"
              variant="body1"
            >
              Perform this update to keep fetching your data and to have the latest features
            </ForwardRef(WithStyles)>
          </div>
        </React.Fragment>
      </Stack>
    </div>
    <div>
      <DefaultButton
        className="u-m-0"
        disabled={false}
        label="Update"
        onClick={[Function]}
        theme="danger"
      />
    </div>
  </Stack>
</div>
`;
